--- a/public/css/index/index.css
+++ b/public/css/index/index.css
@@ -1,9 +1,13 @@
     body {
+        display: flex;
+        flex-direction: column; 
         font-family: "Montserrat", sans-serif;
         font-optical-sizing: auto;
         font-weight: 800;
         font-style: normal;
         margin: 0;
+        padding: 0;
+        background-color: #1C1C1E;
     }       
     .footer {
         text-align: center; 
