--- a/public/css/chatbox/chatbox.css
+++ b/public/css/chatbox/chatbox.css
@@ -1,4 +1,4 @@
-
+/* Chatbox Styles */
 .chat-button {
     position: fixed;
     bottom: 20px;
@@ -17,7 +17,7 @@
     transform: scale(1.5);
 }
 
-.card {
+.chat-card {  /* Renombrado para evitar conflictos */
     position: fixed;
     bottom: 80px;
     right: 20px;
@@ -27,25 +27,23 @@
     border-bottom: 3px solid #D4AF37;
     border-radius: 5px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    opacity: 0; 
+    opacity: 0;
     transform: translateY(30px);
-    transition: transform 0.3s ease, opacity 0.3s ease; 
-    visibility: hidden; 
-    z-index: 9999;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    visibility: hidden;
+    z-index: 999;
 }
 
-.toggle-chat:checked ~ .card {
-    display: block;
+.toggle-chat:checked ~ .chat-card {
     opacity: 1;
     transform: translateY(0);
     visibility: visible;
 }
 
-.toggle-chat:not(:checked) ~ .card {
-    opacity: 0; 
+.toggle-chat:not(:checked) ~ .chat-card {
+    opacity: 0;
     transform: translateY(30px);
-    visibility: hidden; 
+    visibility: hidden;
 }
 
 .chat-header {
@@ -79,7 +77,7 @@
     margin: 0;
     padding: 0;
     font-size: 14px;
-    color: white; 
+    color: white;
 }
 
 .chat-input {
@@ -118,4 +116,3 @@
 .toggle-chat {
     display: none;
 }
-
