--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,21 @@
-body {
-    display: flex;
-    flex-direction: column; 
-    padding: 0;
-    margin: 0;
-    background-color: #1C1C1E;
-}
+    body {
+        display: flex;
+        flex-direction: column; 
+        font-family: "Montserrat", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 800;
+        font-style: normal;
+        margin: 0;
+        padding: 0;
+        background-color: #1C1C1E;
+    } 
+    .footer {
+        text-align: center; 
+        position: relative; 
+        bottom: 0; 
+        width: 90%; 
+        margin: 0 auto;
+        padding: 20px ; 
+        color: #fff; 
+        font-size: 12px;
+    }
