--- a/public/css/navbar/navbar.css
+++ b/public/css/navbar/navbar.css
@@ -48,6 +48,7 @@ nav a:hover {
     align-items: center;
     margin-left: 20px; 
     position: relative;
+    color: white;
 }
 
 .search-border {
