--- a/public/css/Registros-Sesion/registros.css
+++ b/public/css/Registros-Sesion/registros.css
@@ -1,118 +1,164 @@
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: "Montserrat", sans-serif;
-            background-color: rgb(27, 27, 27);
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: "Montserrat", sans-serif;
+        background-color: rgb(27, 27, 27);
+        background-size: cover;
+        background-position: center;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-        .login-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0Z, 0.6); 
-        }
+    .form-container {
+        width: 320px;
+        border-radius: 0.75rem;
+        background-color: rgb(23, 23, 24);
+        padding: 2rem;
+        color: rgba(243, 244, 246, 1);
+    }
 
-        .login-box {
-            background-color: rgba(0, 0, 0, 0.7); 
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-            width: 300px;
-            text-align: center;
-            color: white;
-            display: none; 
-        }
+    .title {
+        text-align: center;
+        font-size: 1.5rem;
+        line-height: 2rem;
+        font-weight: 700;
+    }
 
-        .active {
-            display: block; 
-        }
+    .form {
+        margin-top: 1.5rem;
+    }
 
-        h2 {
-            margin-bottom: 20px;
-        }
+    .input-group {
+        margin-top: 0.25rem;
+        font-size: 0.875rem;
+        line-height: 1.25rem;
+    }
 
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+    .input-group label {
+        display: block;
+        color: rgba(156, 163, 175, 1);
+        margin-bottom: 4px;
+    }
 
-        input[type="text"],
-        input[type="password"],
-        input[type="email"] {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 5px;
-            background-color: rgba(255, 255, 255, 0.2);
-            color: white;
-        }
+    .input-group input {
+        width: 100%;
+        border-radius: 0.375rem;
+        border: 1px solid rgba(55, 65, 81, 1);
+        outline: 0;
+        background-color: rgb(21, 21, 22);
+        padding: 0.75rem 1rem;
+        color: rgba(243, 244, 246, 1);
+    }
 
-        input::placeholder {
-            color: white;
-        }
+    .input-group input:focus {
+        border-color: #D4AF37;
+    }
 
-        button {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #4CAF50;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-        }
+    .forgot {
+        display: flex;
+        justify-content: flex-end;
+        font-size: 0.75rem;
+        line-height: 1rem;
+        color: rgba(156, 163, 175,1);
+        margin: 8px 0 14px 0;
+    }
 
-        button:hover {
-            background-color: #45a049;
-        }
+    .forgot a, .signup a {
+        color: rgba(243, 244, 246, 1);
+        text-decoration: none;
+        font-size: 14px;
+    }
 
-        .links {
-            margin-top: 10px;
-        }
+    .forgot a:hover, .signup a:hover {
+        text-decoration: underline rgba(167, 139, 250, 1);
+    }
 
-        .links a {
-            color: #fff;
-            text-decoration: none;
-            margin-right: 10px;
-            font-size: 14px;
-            cursor: pointer;
-        }
+    button {
+        font-family: inherit;
+        font-size: 20px;
+        background: #D4AF37;
+        padding: 0.3em;
+        width: 100%;
+        max-width: 320px;
+        border: none;
+        border-radius: 25px;
+        overflow: hidden;
+        transition: all 0.2s;
+        cursor: pointer;
+        text-align: center;
+    }
 
-        .social-login {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
+    button span {
+        display: block;
+        margin-left: 0.3em;
+        font-weight: 600;
+        transition: all 0.3s ease-in-out;
+    }
 
-        .social-icon {
-            font-size: 24px;
-            color: white;
-            cursor: pointer;
-        }
+    button svg {
+        display: block;
+        transform-origin: center center;
+        transition: transform 0.3s ease-in-out;
+    }
 
-        .social-icon:hover {
-            opacity: 0.8;
-        }
+    button .svg-name-con {
+        border-radius: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0.7em 1em;
+    }
 
-        .page-enter {
-            opacity: 0;
-            transform: translateY(30px); 
-            transition: opacity 0.5s ease, transform 0.5s ease; 
+    button:hover .svg-wrapper, button.active .svg-wrapper {
+        animation: fly-1 0.6s ease-in-out infinite alternate;
+    }
+
+    button:hover svg, button.active svg {
+        transform: translateX(4.2em) rotate(45deg) scale(1.1);
+    }
+
+    button:hover span, button.active span {
+        transform: translateX(11em);
+    }
+
+    button:active {
+        transform: scale(0.95);
+    }
+
+    @keyframes fly-1 {
+        from {
+            transform: translateY(0.1em);
         }
-        
-        .page-enter-active {
-            opacity: 1;
-            transform: translateY(0);
+        to {
+            transform: translateY(-0.1em);
         }
+    }
+
+    .social-message {
+        display: flex;
+        align-items: center;
+        padding-top: 1rem;
+    }
+
+    .line {
+        height: 1px;
+        flex: 1 1 0%;
+        background-color: rgba(55, 65, 81, 1);
+    }
+
+    .signup {
+        text-align: center;
+        font-size: 0.75rem;
+        line-height: 1rem;
+        color: rgba(156, 163, 175, 1);
+    }
+
+    .register-button {
+        margin-top: 15px; 
+    }
+
+    .input-group {
+        margin-bottom: 15px; 
+    }
